--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,104 @@
 @import url('https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700&family=Josefin+Slab:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600&family=Mulish:ital,wght@0,200;0,300;0,400;0,500;1,200;1,300;1,400&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css');
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+header {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    position: relative;
+}
+
+.img-wrapper {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.img-wrapper img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.5;
+    animation: zoom 25s;
+}
+@keyframes zoom {
+    0% {
+        transform: scale(1.3);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+.banner {
+    position: absolute;
+    top: 30%;
+    left: 12%;
+    
+}
+
+
+.banner h1 {
+    color: white;
+    font-size: 3.5rem;
+    font-family: "Baloo Da 2", serif;
+    font-weight: 200;
+    text-shadow: .3rem 2px rgba(0, 0, 0, .4);
+    line-height: 4.5rem;
+    margin-bottom: 1.5rem;
+    animation: moveBanner 1s 0.3s forwards;
+    opacity: 0;
+    
+}
+
+.banner p {
+    font-size: 1.5rem;
+    font-family: "Josefin Slab", serif;
+    font-weight: 300;
+    color: white;
+    text-shadow: .3rem  2px rgba(0, 0, 0, .4);
+    margin-bottom: 1.5rem;
+    animation: moveBanner 1s 0.65s forwards;
+    opacity: 0;
+}
+
+.banner button {
+    font-family: "Muli", serif;
+    font-size: 1rem;
+    letter-spacing: .1rem;
+    text-transform: uppercase;
+    color: white;
+    background: #2F80ED;
+    padding: 1rem 3rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    opacity: 0;
+    animation: moveBanner 1s 0.75s forwards;
+    
+}
+header .banner button:hover{
+    opacity: 0.9 !important;
+}
+
+@keyframes moveBanner {
+    0%{
+        transform: translateX(10rem);
+    }
+
+    100%{
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+
